<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp10"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/edt_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20"
                android:background="@color/white"
                android:hint="@string/search_and_explore"
                android:maxLines="1"
                android:padding="@dimen/dp5"
                android:textColor="@color/textcolordark"
                android:textColorHint="@color/hintcolor"
                android:textSize="@dimen/text_size_14" />
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar_color"
            android:orientation="horizontal"
            android:padding="@dimen/dp10"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp5"
            android:weightSum="4">

            <Button
                android:id="@+id/btn_home"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:clickable="true"
                android:padding="@dimen/dp5"
                android:text="@string/home"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12" />

            <Button
                android:id="@+id/btn_requests"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:padding="@dimen/dp5"
                android:text="@string/requests"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12" />

            <Button
                android:id="@+id/btn_chats"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight=".8"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:padding="@dimen/dp5"
                android:text="@string/chats"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12" />

            <Button
                android:id="@+id/btn_notification"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1.2"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:padding="@dimen/dp5"
                android:text="@string/notification"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12" />

        </LinearLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>