<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_user_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.justclap.activities.UserDashboard"
    tools:showIn="@layout/app_bar_user_dashboard">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/header"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar_color"
            android:orientation="horizontal"
            android:padding="@dimen/dp10"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp5"
            android:weightSum="4">

            <Button
                android:id="@+id/btn_home"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:clickable="true"
                android:padding="@dimen/dp5"
                android:text="@string/home"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12" />

            <Button
                android:id="@+id/btn_requests"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:padding="@dimen/dp5"
                android:text="@string/requests"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12" />

            <Button
                android:id="@+id/btn_chats"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight=".8"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:padding="@dimen/dp5"
                android:text="@string/chats"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12" />

            <Button
                android:id="@+id/btn_notification"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1.2"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:padding="@dimen/dp5"
                android:text="@string/notification"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_12" />

        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linear" />

    </RelativeLayout>

</RelativeLayout>
